--- a/.gitignore
+++ b/.gitignore
@@ -7,4 +7,17 @@ wheels/
 *.egg-info
 
 # Virtual environments
-.venv
+.venv/
+
+# Django specific ignores
+*.log
+*.pot
+*.pyc
+*.sqlite3
+db.sqlite3
+/media/
+staticfiles/
+static/
+
+# VS Code settings
+.vscode/
