--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,5 +9,8 @@ dependencies = [
     "django-cors-headers>=4.9.0",
     "djangorestframework>=3.16.1",
     "djangorestframework-simplejwt>=5.5.1",
+    "google>=3.0.0",
+    "google-auth-httplib2>=0.2.1",
+    "google-auth-oauthlib>=1.2.3",
     "python-dotenv>=1.1.1",
 ]
